// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parseReplay on real Champions replays > snapshots every fixture (guards against silent parser drift) > gen9championsvgc2026regmb-2644522165 1`] = `
{
  "formatId": "gen9championsvgc2026regmb",
  "gameType": "doubles",
  "parserVersion": 1,
  "players": [
    {
      "brought": [
        "whimsicott",
        "weavile",
        "annihilape",
      ],
      "leads": [
        "whimsicott",
        "weavile",
      ],
      "name": "Goomyracle",
      "roster": [
        {
          "fieldSources": {},
          "gender": "M",
          "level": 50,
          "moves": [],
          "source": "revealed",
          "species": "Delphox",
          "speciesId": "delphox",
        },
        {
          "fieldSources": {},
          "gender": "F",
          "level": 50,
          "moves": [],
          "source": "revealed",
          "species": "Primarina",
          "speciesId": "primarina",
        },
        {
          "fieldSources": {
            "move:moonblast": "revealed",
            "move:tailwind": "revealed",
          },
          "gender": "F",
          "level": 50,
          "moves": [
            "Tailwind",
            "Moonblast",
          ],
          "source": "revealed",
          "species": "Whimsicott",
          "speciesId": "whimsicott",
        },
        {
          "ability": "Pressure",
          "fieldSources": {
            "ability": "revealed",
            "move:fakeout": "revealed",
            "move:knockoff": "revealed",
            "move:tripleaxel": "revealed",
          },
          "gender": "F",
          "level": 50,
          "moves": [
            "Fake Out",
            "Triple Axel",
            "Knock Off",
          ],
          "source": "revealed",
          "species": "Weavile",
          "speciesId": "weavile",
        },
        {
          "fieldSources": {},
          "gender": "M",
          "level": 50,
          "moves": [],
          "source": "revealed",
          "species": "Glimmora",
          "speciesId": "glimmora",
        },
        {
          "fieldSources": {
            "move:protect": "revealed",
            "move:ragefist": "revealed",
          },
          "gender": "M",
          "level": 50,
          "moves": [
            "Protect",
            "Rage Fist",
          ],
          "source": "revealed",
          "species": "Annihilape",
          "speciesId": "annihilape",
        },
      ],
      "userId": "goomyracle",
      "won": true,
    },
    {
      "brought": [
        "whimsicott",
        "meowstic",
        "clawitzer",
        "alakazam",
      ],
      "leads": [
        "whimsicott",
        "meowstic",
      ],
      "name": "CrikeyRoo",
      "roster": [
        {
          "fieldSources": {
            "item": "revealed",
            "move:aurasphere": "revealed",
            "move:terrainpulse": "revealed",
          },
          "gender": "M",
          "item": "Dragon Fang",
          "itemConsumed": true,
          "level": 50,
          "moves": [
            "Aura Sphere",
            "Terrain Pulse",
          ],
          "source": "revealed",
          "species": "Clawitzer",
          "speciesId": "clawitzer",
        },
        {
          "fieldSources": {},
          "gender": "M",
          "level": 50,
          "moves": [],
          "source": "revealed",
          "species": "Glimmora",
          "speciesId": "glimmora",
        },
        {
          "fieldSources": {},
          "gender": "F",
          "level": 50,
          "moves": [],
          "source": "revealed",
          "species": "Kingambit",
          "speciesId": "kingambit",
        },
        {
          "fieldSources": {
            "move:encore": "revealed",
            "move:tailwind": "revealed",
          },
          "gender": "M",
          "level": 50,
          "moves": [
            "Tailwind",
            "Encore",
          ],
          "source": "revealed",
          "species": "Whimsicott",
          "speciesId": "whimsicott",
        },
        {
          "fieldSources": {
            "move:protect": "revealed",
          },
          "gender": "F",
          "level": 50,
          "moves": [
            "Protect",
          ],
          "source": "revealed",
          "species": "Alakazam",
          "speciesId": "alakazam",
        },
        {
          "fieldSources": {
            "move:darkpulse": "revealed",
            "move:expandingforce": "revealed",
            "move:protect": "revealed",
            "move:psychicterrain": "revealed",
          },
          "gender": "M",
          "level": 50,
          "moves": [
            "Psychic Terrain",
            "Dark Pulse",
            "Expanding Force",
            "Protect",
          ],
          "source": "revealed",
          "species": "Meowstic",
          "speciesId": "meowstic",
        },
      ],
      "userId": "crikeyroo",
      "won": false,
    },
  ],
  "rating": 1108,
  "replayId": "gen9championsvgc2026regmb-2644522165",
  "tie": false,
  "uploadTime": 1783285781,
  "views": 3,
}
`;

exports[`parseReplay on real Champions replays > snapshots every fixture (guards against silent parser drift) > gen9championsvgc2026regmb-2644523475 1`] = `
{
  "formatId": "gen9championsvgc2026regmb",
  "gameType": "doubles",
  "parserVersion": 1,
  "players": [
    {
      "brought": [
        "farigiraf",
        "tinkaton",
        "drampa",
        "sinistcha",
      ],
      "leads": [
        "farigiraf",
        "tinkaton",
      ],
      "megaUser": "drampa",
      "name": "JRockSM",
      "roster": [
        {
          "ability": "Berserk",
          "fieldSources": {
            "ability": "revealed",
            "item": "revealed",
            "move:calmmind": "revealed",
            "move:dracometeor": "revealed",
            "move:hypervoice": "revealed",
          },
          "gender": "M",
          "item": "Drampanite",
          "level": 50,
          "megaForme": "Drampa-Mega",
          "moves": [
            "Draco Meteor",
            "Calm Mind",
            "Hyper Voice",
          ],
          "source": "revealed",
          "species": "Drampa",
          "speciesId": "drampa",
        },
        {
          "fieldSources": {
            "move:helpinghand": "revealed",
            "move:trickroom": "revealed",
          },
          "gender": "M",
          "level": 50,
          "moves": [
            "Trick Room",
            "Helping Hand",
          ],
          "source": "revealed",
          "species": "Farigiraf",
          "speciesId": "farigiraf",
        },
        {
          "fieldSources": {},
          "level": 50,
          "moves": [],
          "source": "revealed",
          "species": "Sinistcha",
          "speciesId": "sinistcha",
        },
        {
          "fieldSources": {},
          "gender": "F",
          "level": 50,
          "moves": [],
          "source": "revealed",
          "species": "Kingambit",
          "speciesId": "kingambit",
        },
        {
          "fieldSources": {},
          "gender": "M",
          "level": 50,
          "moves": [],
          "source": "revealed",
          "species": "Basculegion",
          "speciesId": "basculegion",
        },
        {
          "ability": "Mold Breaker",
          "fieldSources": {
            "ability": "revealed",
            "move:fakeout": "revealed",
            "move:gigatonhammer": "revealed",
          },
          "gender": "F",
          "level": 50,
          "moves": [
            "Fake Out",
            "Gigaton Hammer",
          ],
          "source": "revealed",
          "species": "Tinkaton",
          "speciesId": "tinkaton",
        },
      ],
      "userId": "jrocksm",
      "won": false,
    },
    {
      "brought": [
        "charizard",
        "dragonite",
        "torkoal",
        "hatterene",
      ],
      "leads": [
        "charizard",
        "dragonite",
      ],
      "name": "pcrlbot02888784c1",
      "roster": [
        {
          "fieldSources": {
            "move:airslash": "revealed",
            "move:heatwave": "revealed",
          },
          "gender": "F",
          "level": 50,
          "moves": [
            "Heat Wave",
            "Air Slash",
          ],
          "source": "revealed",
          "species": "Charizard",
          "speciesId": "charizard",
        },
        {
          "fieldSources": {},
          "gender": "F",
          "level": 50,
          "moves": [],
          "source": "revealed",
          "species": "Venusaur",
          "speciesId": "venusaur",
        },
        {
          "fieldSources": {
            "move:earthpower": "revealed",
            "move:eruption": "revealed",
          },
          "gender": "F",
          "level": 50,
          "moves": [
            "Eruption",
            "Earth Power",
          ],
          "source": "revealed",
          "species": "Torkoal",
          "speciesId": "torkoal",
        },
        {
          "fieldSources": {},
          "level": 50,
          "moves": [],
          "source": "revealed",
          "species": "Maushold",
          "speciesId": "maushold",
        },
        {
          "fieldSources": {
            "move:extremespeed": "revealed",
          },
          "gender": "F",
          "level": 50,
          "moves": [
            "Extreme Speed",
          ],
          "source": "revealed",
          "species": "Dragonite",
          "speciesId": "dragonite",
        },
        {
          "fieldSources": {
            "move:expandingforce": "revealed",
            "move:mysticalfire": "revealed",
          },
          "gender": "F",
          "level": 50,
          "moves": [
            "Expanding Force",
            "Mystical Fire",
          ],
          "source": "revealed",
          "species": "Hatterene",
          "speciesId": "hatterene",
        },
      ],
      "userId": "pcrlbot02888784c1",
      "won": true,
    },
  ],
  "rating": 1039,
  "replayId": "gen9championsvgc2026regmb-2644523475",
  "tie": false,
  "uploadTime": 1783285781,
  "views": 2,
}
`;

exports[`parseReplay on real Champions replays > snapshots every fixture (guards against silent parser drift) > gen9championsvgc2026regmb-2644523560 1`] = `
{
  "formatId": "gen9championsvgc2026regmb",
  "gameType": "doubles",
  "parserVersion": 1,
  "players": [
    {
      "brought": [
        "farigiraf",
        "scrafty",
        "lycanrocdusk",
        "torkoal",
      ],
      "leads": [
        "farigiraf",
        "scrafty",
      ],
      "megaUser": "scrafty",
      "name": "lazmawasa",
      "roster": [
        {
          "fieldSources": {
            "move:accelerock": "revealed",
          },
          "gender": "F",
          "level": 50,
          "moves": [
            "Accelerock",
          ],
          "nickname": "sebastian",
          "source": "revealed",
          "species": "Lycanroc-Dusk",
          "speciesId": "lycanrocdusk",
        },
        {
          "fieldSources": {},
          "gender": "F",
          "level": 50,
          "moves": [],
          "nickname": "lazmad",
          "shiny": true,
          "source": "revealed",
          "species": "Torkoal",
          "speciesId": "torkoal",
        },
        {
          "fieldSources": {
            "move:dazzlinggleam": "revealed",
            "move:trickroom": "revealed",
            "move:twinbeam": "revealed",
          },
          "gender": "M",
          "level": 50,
          "moves": [
            "Twin Beam",
            "Trick Room",
            "Dazzling Gleam",
          ],
          "nickname": "felicidad",
          "source": "revealed",
          "species": "Farigiraf",
          "speciesId": "farigiraf",
        },
        {
          "ability": "Intimidate",
          "fieldSources": {
            "ability": "revealed",
            "item": "revealed",
          },
          "gender": "F",
          "item": "Scraftinite",
          "level": 50,
          "megaForme": "Scrafty-Mega",
          "moves": [],
          "nickname": "jackyjill",
          "source": "revealed",
          "species": "Scrafty",
          "speciesId": "scrafty",
        },
        {
          "fieldSources": {},
          "gender": "M",
          "level": 50,
          "moves": [],
          "source": "revealed",
          "species": "Eelektross",
          "speciesId": "eelektross",
        },
        {
          "fieldSources": {},
          "gender": "F",
          "level": 50,
          "moves": [],
          "source": "revealed",
          "species": "Tinkaton",
          "speciesId": "tinkaton",
        },
      ],
      "userId": "lazmawasa",
      "won": true,
    },
    {
      "brought": [
        "aerodactyl",
        "sneasler",
        "charizard",
        "incineroar",
      ],
      "leads": [
        "aerodactyl",
        "sneasler",
      ],
      "megaUser": "charizard",
      "name": "pcrlbot014766a8d8",
      "roster": [
        {
          "ability": "Unnerve",
          "fieldSources": {
            "ability": "revealed",
            "move:dualwingbeat": "revealed",
          },
          "gender": "F",
          "level": 50,
          "moves": [
            "Dual Wingbeat",
          ],
          "source": "revealed",
          "species": "Aerodactyl",
          "speciesId": "aerodactyl",
        },
        {
          "fieldSources": {
            "item": "revealed",
            "move:closecombat": "revealed",
          },
          "gender": "F",
          "item": "White Herb",
          "itemConsumed": true,
          "level": 50,
          "moves": [
            "Close Combat",
          ],
          "source": "revealed",
          "species": "Sneasler",
          "speciesId": "sneasler",
        },
        {
          "fieldSources": {
            "item": "revealed",
          },
          "gender": "M",
          "item": "Charizardite Y",
          "level": 50,
          "megaForme": "Charizard-Mega-Y",
          "moves": [],
          "source": "revealed",
          "species": "Charizard",
          "speciesId": "charizard",
        },
        {
          "ability": "Intimidate",
          "fieldSources": {
            "ability": "revealed",
            "item": "revealed",
            "move:partingshot": "revealed",
            "move:throatchop": "revealed",
          },
          "gender": "F",
          "item": "Sitrus Berry",
          "itemConsumed": true,
          "level": 50,
          "moves": [
            "Throat Chop",
            "Parting Shot",
          ],
          "source": "revealed",
          "species": "Incineroar",
          "speciesId": "incineroar",
        },
        {
          "fieldSources": {},
          "gender": "M",
          "level": 50,
          "moves": [],
          "source": "revealed",
          "species": "Kingambit",
          "speciesId": "kingambit",
        },
        {
          "fieldSources": {},
          "gender": "M",
          "level": 50,
          "moves": [],
          "source": "revealed",
          "species": "Whimsicott",
          "speciesId": "whimsicott",
        },
      ],
      "userId": "pcrlbot014766a8d8",
      "won": false,
    },
  ],
  "rating": 1006,
  "replayId": "gen9championsvgc2026regmb-2644523560",
  "tie": false,
  "uploadTime": 1783285793,
  "views": 3,
}
`;

exports[`parseReplay on real Champions replays > snapshots every fixture (guards against silent parser drift) > gen9championsvgc2026regmb-2644523805 1`] = `
{
  "formatId": "gen9championsvgc2026regmb",
  "gameType": "doubles",
  "parserVersion": 1,
  "players": [
    {
      "brought": [
        "rotomwash",
        "staraptor",
        "tyranitar",
        "excadrill",
      ],
      "leads": [
        "rotomwash",
        "staraptor",
      ],
      "megaUser": "staraptor",
      "name": "QuinnCS",
      "roster": [
        {
          "ability": "Intimidate",
          "fieldSources": {
            "ability": "revealed",
            "item": "revealed",
            "move:bravebird": "revealed",
          },
          "gender": "F",
          "item": "Staraptite",
          "level": 50,
          "megaForme": "Staraptor-Mega",
          "moves": [
            "Brave Bird",
          ],
          "shiny": true,
          "source": "revealed",
          "species": "Staraptor",
          "speciesId": "staraptor",
        },
        {
          "fieldSources": {},
          "gender": "M",
          "level": 50,
          "moves": [],
          "source": "revealed",
          "species": "Houndstone",
          "speciesId": "houndstone",
        },
        {
          "fieldSources": {
            "move:rockslide": "revealed",
          },
          "gender": "M",
          "level": 50,
          "moves": [
            "Rock Slide",
          ],
          "source": "revealed",
          "species": "Tyranitar",
          "speciesId": "tyranitar",
        },
        {
          "fieldSources": {
            "move:voltswitch": "revealed",
          },
          "level": 50,
          "moves": [
            "Volt Switch",
          ],
          "nickname": "Rotom",
          "shiny": true,
          "source": "revealed",
          "species": "Rotom-Wash",
          "speciesId": "rotomwash",
        },
        {
          "fieldSources": {
            "item": "revealed",
            "move:earthquake": "revealed",
            "move:protect": "revealed",
          },
          "gender": "F",
          "item": "Focus Sash",
          "itemConsumed": true,
          "level": 50,
          "moves": [
            "Protect",
            "Earthquake",
          ],
          "shiny": true,
          "source": "revealed",
          "species": "Excadrill",
          "speciesId": "excadrill",
        },
        {
          "fieldSources": {},
          "gender": "M",
          "level": 50,
          "moves": [],
          "source": "revealed",
          "species": "Venusaur",
          "speciesId": "venusaur",
        },
      ],
      "userId": "quinncs",
      "won": true,
    },
    {
      "brought": [
        "charizard",
        "whimsicott",
        "sylveon",
        "basculegion",
      ],
      "leads": [
        "charizard",
        "whimsicott",
      ],
      "megaUser": "charizard",
      "name": "Purinja92179",
      "roster": [
        {
          "fieldSources": {
            "item": "revealed",
            "move:heatwave": "revealed",
          },
          "gender": "F",
          "item": "Charizardite Y",
          "level": 50,
          "megaForme": "Charizard-Mega-Y",
          "moves": [
            "Heat Wave",
          ],
          "source": "revealed",
          "species": "Charizard",
          "speciesId": "charizard",
        },
        {
          "fieldSources": {
            "item": "revealed",
            "move:tailwind": "revealed",
          },
          "gender": "F",
          "item": "Focus Sash",
          "itemConsumed": true,
          "level": 50,
          "moves": [
            "Tailwind",
          ],
          "source": "revealed",
          "species": "Whimsicott",
          "speciesId": "whimsicott",
        },
        {
          "fieldSources": {
            "move:lastrespects": "revealed",
          },
          "gender": "M",
          "level": 50,
          "moves": [
            "Last Respects",
          ],
          "source": "revealed",
          "species": "Basculegion",
          "speciesId": "basculegion",
        },
        {
          "fieldSources": {},
          "gender": "M",
          "level": 50,
          "moves": [],
          "source": "revealed",
          "species": "Kingambit",
          "speciesId": "kingambit",
        },
        {
          "fieldSources": {
            "move:hypervoice": "revealed",
          },
          "gender": "M",
          "level": 50,
          "moves": [
            "Hyper Voice",
          ],
          "source": "revealed",
          "species": "Sylveon",
          "speciesId": "sylveon",
        },
        {
          "fieldSources": {},
          "gender": "M",
          "level": 50,
          "moves": [],
          "source": "revealed",
          "species": "Garchomp",
          "speciesId": "garchomp",
        },
      ],
      "userId": "purinja92179",
      "won": false,
    },
  ],
  "rating": 1327,
  "replayId": "gen9championsvgc2026regmb-2644523805",
  "tie": false,
  "uploadTime": 1783285778,
  "views": 3,
}
`;

exports[`parseReplay on real Champions replays > snapshots every fixture (guards against silent parser drift) > gen9championsvgc2026regmb-2644523989 1`] = `
{
  "formatId": "gen9championsvgc2026regmb",
  "gameType": "doubles",
  "parserVersion": 1,
  "players": [
    {
      "brought": [
        "incineroar",
        "basculegionf",
        "archaludon",
        "rotomwash",
      ],
      "leads": [
        "incineroar",
        "basculegionf",
      ],
      "name": "pcrlbot03bef95e87",
      "roster": [
        {
          "fieldSources": {},
          "gender": "M",
          "level": 50,
          "moves": [],
          "source": "revealed",
          "species": "Pelipper",
          "speciesId": "pelipper",
        },
        {
          "fieldSources": {
            "move:hydropump": "revealed",
          },
          "gender": "F",
          "level": 50,
          "moves": [
            "Hydro Pump",
          ],
          "nickname": "Basculegion",
          "source": "revealed",
          "species": "Basculegion-F",
          "speciesId": "basculegionf",
        },
        {
          "ability": "Stamina",
          "fieldSources": {
            "ability": "revealed",
            "move:electroshot": "revealed",
          },
          "gender": "F",
          "level": 50,
          "moves": [
            "Electro Shot",
          ],
          "source": "revealed",
          "species": "Archaludon",
          "speciesId": "archaludon",
        },
        {
          "ability": "Intimidate",
          "fieldSources": {
            "ability": "revealed",
            "move:flareblitz": "revealed",
            "move:throatchop": "revealed",
          },
          "gender": "M",
          "level": 50,
          "moves": [
            "Throat Chop",
            "Flare Blitz",
          ],
          "source": "revealed",
          "species": "Incineroar",
          "speciesId": "incineroar",
        },
        {
          "fieldSources": {},
          "gender": "M",
          "level": 50,
          "moves": [],
          "source": "revealed",
          "species": "Kingambit",
          "speciesId": "kingambit",
        },
        {
          "fieldSources": {
            "item": "revealed",
            "move:hydropump": "revealed",
          },
          "item": "Sitrus Berry",
          "itemConsumed": true,
          "level": 50,
          "moves": [
            "Hydro Pump",
          ],
          "nickname": "Rotom",
          "source": "revealed",
          "species": "Rotom-Wash",
          "speciesId": "rotomwash",
        },
      ],
      "userId": "pcrlbot03bef95e87",
      "won": false,
    },
    {
      "brought": [
        "incineroar",
        "farigiraf",
        "torkoal",
        "floetteeternal",
      ],
      "leads": [
        "incineroar",
        "farigiraf",
      ],
      "megaUser": "floetteeternal",
      "name": "sdsdfsdfawee",
      "roster": [
        {
          "ability": "Fairy Aura",
          "fieldSources": {
            "ability": "revealed",
            "item": "revealed",
            "move:dazzlinggleam": "revealed",
            "move:moonblast": "revealed",
            "move:protect": "revealed",
          },
          "gender": "F",
          "item": "Floettite",
          "level": 50,
          "megaForme": "Floette-Mega",
          "moves": [
            "Protect",
            "Dazzling Gleam",
            "Moonblast",
          ],
          "nickname": "Floette",
          "source": "revealed",
          "species": "Floette-Eternal",
          "speciesId": "floetteeternal",
        },
        {
          "ability": "Intimidate",
          "fieldSources": {
            "ability": "revealed",
          },
          "gender": "M",
          "level": 50,
          "moves": [],
          "source": "revealed",
          "species": "Incineroar",
          "speciesId": "incineroar",
        },
        {
          "fieldSources": {
            "item": "revealed",
            "move:helpinghand": "revealed",
            "move:thunderbolt": "revealed",
            "move:trickroom": "revealed",
          },
          "gender": "F",
          "item": "Sitrus Berry",
          "itemConsumed": true,
          "level": 50,
          "moves": [
            "Trick Room",
            "Thunderbolt",
            "Helping Hand",
          ],
          "source": "revealed",
          "species": "Farigiraf",
          "speciesId": "farigiraf",
        },
        {
          "fieldSources": {
            "move:earthpower": "revealed",
          },
          "gender": "F",
          "level": 50,
          "moves": [
            "Earth Power",
          ],
          "source": "revealed",
          "species": "Torkoal",
          "speciesId": "torkoal",
        },
        {
          "fieldSources": {},
          "gender": "M",
          "level": 50,
          "moves": [],
          "source": "revealed",
          "species": "Milotic",
          "speciesId": "milotic",
        },
        {
          "fieldSources": {},
          "gender": "M",
          "level": 50,
          "moves": [],
          "source": "revealed",
          "species": "Lycanroc-Dusk",
          "speciesId": "lycanrocdusk",
        },
      ],
      "userId": "sdsdfsdfawee",
      "won": true,
    },
  ],
  "rating": 1036,
  "replayId": "gen9championsvgc2026regmb-2644523989",
  "tie": false,
  "uploadTime": 1783285784,
  "views": 2,
}
`;
